ajuste busqueda por idNorma libreria y quitar imagen de no existe data

--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -175,9 +175,9 @@
         </div>
     </div>
     <div *ngIf="!normasListWidgets || normasListWidgets.length == 0">
-      <div style="text-align: center;width: 100%;">
+      <!--<div style="text-align: center;width: 100%;">
           <img src="assets/images/file.png" width="300" height="200"/>
-      </div>
+      </div>-->
       <div style="text-align: center;width: 100%;font-size: 20px;">
           No hay datos para mostrar
       </div>
@@ -293,9 +293,9 @@
                 <div class="card-body">
 
                     <div *ngIf="articles_proyects.length < 1">
-                        <div style="text-align: center;width: 100%;">
+                        <!--<div style="text-align: center;width: 100%;">
                             <img src="assets/images/file.png" width="300" height="200"/>
-                        </div>
+                        </div>-->
                         <div style="text-align: center;width: 100%;font-size: 20px;">
                             Aún no tiene articulos aplicables
                         </div>
@@ -398,9 +398,9 @@
                 <div class="card-body">
 
                     <div *ngIf="installations_data.length < 1">
-                        <div style="text-align: center;width: 100%;">
+                        <!--<div style="text-align: center;width: 100%;">
                             <img src="assets/images/file.png" width="300" height="200"/>
-                        </div>
+                        </div>-->
                         <div style="text-align: center;width: 100%;font-size: 20px;">
                             Aún no tiene instalaciones
                         </div>
