--- a/src/app/pages/projects/list/list.component.html
+++ b/src/app/pages/projects/list/list.component.html
@@ -142,9 +142,9 @@
       </div>
   </div>
   <div *ngIf="!projectListWidgets || projectListWidgets.length == 0">
-    <div style="text-align: center;width: 100%;">
+    <!--<div style="text-align: center;width: 100%;">
         <img src="assets/images/file.png" width="300" height="200"/>
-    </div>
+    </div>-->
     <div style="text-align: center;width: 100%;font-size: 20px;">
         No hay datos para mostrar
     </div>
