--- a/src/app/pages/auditor/create/create.component.html
+++ b/src/app/pages/auditor/create/create.component.html
@@ -187,9 +187,9 @@
                 <div class="card-body">
 
                     <div *ngIf="installations_select.length < 1">
-                        <div style="text-align: center;width: 100%;">
+                        <!--<div style="text-align: center;width: 100%;">
                             <img src="assets/images/file.png" width="300" height="200"/>
-                        </div>
+                        </div>-->
                         <div style="text-align: center;width: 100%;font-size: 20px;">
                             Aún no se han vinculado instalaciones
                         </div>
