--- a/src/app/pages/auditor/list/list.component.html
+++ b/src/app/pages/auditor/list/list.component.html
@@ -132,9 +132,9 @@
       </div>
   </div>
   <div *ngIf="!projectListWidgets || projectListWidgets.length == 0">
-    <div style="text-align: center;width: 100%;">
+    <!--<div style="text-align: center;width: 100%;">
         <img src="assets/images/file.png" width="300" height="200"/>
-    </div>
+    </div>-->
     <div style="text-align: center;width: 100%;font-size: 20px;">
         Aún no se han creado Auditorias
     </div>
