--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -702,7 +702,7 @@
                                     <ng-template #myArticles let-s="s">
                                     <div class="team-list list-view-filter row" *ngIf="s.tipoParte == 'Artículo'">
                                         <div class="col">
-                                            <div class="card team-box">
+                                            <div [ngClass]="byArticuloVinculacion(s.articuloId) > 0 ? 'card team-box border card-border-success' : 'card team-box'">
                                                 <div class="team-cover">
                                                     
                                                 </div>
@@ -1011,12 +1011,12 @@
                             <div class="mt-auto">
                                 <div class="d-flex mb-2">
                                     <div class="flex-grow-1">
-                                        <div><h4>0</h4></div>
-                                        <div>Artículos Aplicables</div>
+                                        <div><h4>{{byCuerpoVinculacion(s.normaId)}}</h4></div>
+                                        <div>{{byCuerpoVinculacion(s.normaId) == 1 ? 'Artículo Aplicable' : 'Artículos Aplicables'}}</div>
                                     </div>
                                     <div class="flex-grow-1">
-                                        <div><h4>0</h4></div>
-                                        <div>Vinculaciones</div>
+                                        <div><h4>{{byCuerpoVinculacion(s.normaId)}}</h4></div>
+                                        <div>{{byCuerpoVinculacion(s.normaId) == 1 ? 'Vinculación' : 'Vinculaciones'}}</div>
                                     </div>
                                 </div>
                             </div>
