correccion centrado multiple

--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -905,11 +905,11 @@
                         <button
                                 class="btn btn-light view-btn mb-2" style="width: 100%;"  >Cierre</button>
                     </div>
-                    <div class="col-sm-2" style="margin: auto;border-left: 3px solid #fff;padding-top: 50px;padding-bottom: 50px;padding-left: 35px;padding-right: 35px;">
-                        <button type="button" class="btn btn-primary waves-effect waves-light" style="color: #634A1F;font-family: Poppins;font-weight: 400;background-color: #fff;" data-bs-target="#showModal" (click)="openModal3(content3, 'multiple')">Configurar Instalaciones</button>
+                    <div class="col-sm-2" style="border-left: 3px solid #fff;display: grid;">
+                        <button type="button" class="btn btn-primary waves-effect waves-light" style="color: #634A1F;font-family: Poppins;font-weight: 400;background-color: #fff;margin:auto;" data-bs-target="#showModal" (click)="openModal3(content3, 'multiple')">Configurar Instalaciones</button>
                     </div>
-                    <div class="col-sm-2" style="margin: auto;border-left: 3px solid #fff;padding-top: 50px;padding-bottom: 50px;padding-left: 60px;padding-right: 60px;">
-                        <button type="button" class="btn btn-success waves-effect waves-light" style="font-family: Poppins;border-radius: 24px;" >Aplicar a todos</button>
+                    <div class="col-sm-2" style="border-left: 3px solid #fff;display: grid;">
+                        <button type="button" class="btn btn-success waves-effect waves-light" style="font-family: Poppins;border-radius: 24px;margin: auto;" >Aplicar a todos</button>
                     </div>
                 </div>
             </div>
