correcciones estilos y atributos backend

--- a/src/app/pages/projects/create/create.component.html
+++ b/src/app/pages/projects/create/create.component.html
@@ -77,8 +77,10 @@
                         <i class="ri-add-line"></i>
                     </div>
                 </div>
+                <div style="min-height: 140px;max-height: 140px;">
                 <h4 class="card-title">Identificación/Vinculación</h4>
                 <p class="card-text text-muted">Completa los campos requeridos y obtendrás un reporte gráfico y ejecutivo de las obligaciones legales aplicables a tu proyecto y vinculalos a tus instalaciones para gestionar su cumplimiento.</p>
+                </div>
                 <a href="javascript:void(0);" class="btn btn-success"  (click)="saveProject(1)">Iniciar</a>
             </div>
         </div>
@@ -90,13 +92,15 @@
                         <i class="ri-add-line"></i>
                     </div>
                 </div>
+                <div style="min-height: 140px;max-height: 140px;">
                 <h4 class="card-title">Evalua las obligaciones legales de tu proyecto</h4>
                 <p class="card-text text-muted">Evalua las obligaciones legales aplicables de tu proyecto y gestiona hallazgos segun instalaciones.</p>
+                </div>
                 <a href="javascript:void(0);" class="btn btn-success" style="
                 background: #767676;
                 border-color: #767676;
                 cursor: no-drop;
-            ">Iniciar</a>
+                ">Iniciar</a>
             </div>
         </div>
         
@@ -107,13 +111,16 @@
                         <i class="ri-add-line"></i>
                     </div>
                 </div>
+                <div style="min-height: 140px;max-height: 140px;">
+                
                 <h4 class="card-title">Seguimiento y Control de los hallazgos de tu proyecto</h4>
                 <p class="card-text text-muted">Gestiona el cumplimiento de los hallazgos encontrados en tu proyecto.</p>
+                </div>
                 <a href="javascript:void(0);" class="btn btn-success" style="
                 background: #767676;
                 border-color: #767676;
                 cursor: no-drop;
-            ">Iniciar</a>
+                ">Iniciar</a>
             </div>
         </div>
     </div>
