--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -107,6 +107,88 @@
   </div>
   
   <div style="min-height: 600px;">
+    
+    <div class="row text-center text-center align-items-center mb-4 justify-content-center">
+        <div class="col-xxl-2 col-lg-2" style="
+        margin-left: 30px;
+        margin-right: 30px;
+    ">
+            <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
+            cursor: pointer;
+            border-radius: 24px;
+            align-items: center;
+            word-wrap: break-word;
+            word-break: break-all;
+            min-height: 50px;
+            min-width: 120px;
+            width: auto;
+            display:flex;
+            justify-content: center;
+            align-items: center;" class="div-texto-check texto-check">
+                Legislación ambiental
+            </div><!--[ngClass]="{'div-texto-check texto-check': validateCuerpo(c.cuerpoLegal)}" (click)="selectCuerpo(c.cuerpoLegal)"-->
+        </div>
+
+        <div class="col-xxl-2 col-lg-2" style="
+        margin-left: 30px;
+        margin-right: 30px;
+    ">
+            <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
+            cursor: pointer;
+            border-radius: 24px;
+            align-items: center;
+            word-wrap: break-word;
+            word-break: break-all;
+            min-height: 50px;
+            min-width: 120px;
+            width: auto;
+            display:flex;
+            justify-content: center;
+            align-items: center;">
+                Legislación de Seguridad y Salud en el trabajo 
+            </div>
+        </div>
+        
+        <div class="col-xxl-2 col-lg-2" style="
+        margin-left: 30px;
+        margin-right: 30px;
+    ">
+            <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
+            cursor: pointer;
+            border-radius: 24px;
+            align-items: center;
+            word-wrap: break-word;
+            word-break: break-all;
+            min-height: 50px;
+            min-width: 120px;
+            width: auto;
+            display:flex;
+            justify-content: center;
+            align-items: center;">
+                Legislación laboral 
+            </div>
+        </div>
+        
+        <div class="col-xxl-2 col-lg-2" style="
+        margin-left: 30px;
+        margin-right: 30px;
+    ">
+            <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
+            cursor: pointer;
+            border-radius: 24px;
+            align-items: center;
+            word-wrap: break-word;
+            word-break: break-all;
+            min-height: 50px;
+            min-width: 120px;
+            width: auto;
+            display:flex;
+            justify-content: center;
+            align-items: center;">
+                Legislación de energía 
+            </div>
+        </div>
+    </div>
   <div class="row">
    
     <app-toastsp aria-live="polite" aria-atomic="true"></app-toastsp>
@@ -258,6 +340,87 @@
             </div>
           </div>
 
+          <div class="row text-center text-center align-items-center mb-4 justify-content-center" *ngIf="selectList">
+            <div class="col-xxl-2 col-lg-2" style="
+            margin-left: 30px;
+            margin-right: 30px;
+        ">
+                <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
+                cursor: pointer;
+                border-radius: 24px;
+                align-items: center;
+                word-wrap: break-word;
+                word-break: break-all;
+                min-height: 50px;
+                min-width: 120px;
+                width: auto;
+                display:flex;
+                justify-content: center;
+                align-items: center;" class="div-texto-check texto-check">
+                    Legislación ambiental
+                </div><!--[ngClass]="{'div-texto-check texto-check': validateCuerpo(c.cuerpoLegal)}" (click)="selectCuerpo(c.cuerpoLegal)"-->
+            </div>
+    
+            <div class="col-xxl-2 col-lg-2" style="
+            margin-left: 30px;
+            margin-right: 30px;
+        ">
+                <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
+                cursor: pointer;
+                border-radius: 24px;
+                align-items: center;
+                word-wrap: break-word;
+                word-break: break-all;
+                min-height: 50px;
+                min-width: 120px;
+                width: auto;
+                display:flex;
+                justify-content: center;
+                align-items: center;">
+                    Legislación de Seguridad y Salud en el trabajo 
+                </div>
+            </div>
+            
+            <div class="col-xxl-2 col-lg-2" style="
+            margin-left: 30px;
+            margin-right: 30px;
+        ">
+                <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
+                cursor: pointer;
+                border-radius: 24px;
+                align-items: center;
+                word-wrap: break-word;
+                word-break: break-all;
+                min-height: 50px;
+                min-width: 120px;
+                width: auto;
+                display:flex;
+                justify-content: center;
+                align-items: center;">
+                    Legislación laboral 
+                </div>
+            </div>
+            
+            <div class="col-xxl-2 col-lg-2" style="
+            margin-left: 30px;
+            margin-right: 30px;
+        ">
+                <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
+                cursor: pointer;
+                border-radius: 24px;
+                align-items: center;
+                word-wrap: break-word;
+                word-break: break-all;
+                min-height: 50px;
+                min-width: 120px;
+                width: auto;
+                display:flex;
+                justify-content: center;
+                align-items: center;">
+                    Legislación de energía 
+                </div>
+            </div>
+        </div>
     <div class="row" *ngIf="selectList">
         <div class="col-lg-12">
             <!--<div class="card">
@@ -679,6 +842,88 @@
             </div>
         </div>-->
 
+        <div class="row text-center text-center align-items-center mb-4 justify-content-center">
+            <div class="col-xxl-2 col-lg-2" style="
+            margin-left: 30px;
+            margin-right: 30px;
+        ">
+                <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
+                cursor: pointer;
+                border-radius: 24px;
+                align-items: center;
+                word-wrap: break-word;
+                word-break: break-all;
+                min-height: 50px;
+                min-width: 120px;
+                width: auto;
+                display:flex;
+                justify-content: center;
+                align-items: center;" class="div-texto-check texto-check">
+                    Legislación ambiental
+                </div><!--[ngClass]="{'div-texto-check texto-check': validateCuerpo(c.cuerpoLegal)}" (click)="selectCuerpo(c.cuerpoLegal)"-->
+            </div>
+    
+            <div class="col-xxl-2 col-lg-2" style="
+            margin-left: 30px;
+            margin-right: 30px;
+        ">
+                <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
+                cursor: pointer;
+                border-radius: 24px;
+                align-items: center;
+                word-wrap: break-word;
+                word-break: break-all;
+                min-height: 50px;
+                min-width: 120px;
+                width: auto;
+                display:flex;
+                justify-content: center;
+                align-items: center;">
+                    Legislación de Seguridad y Salud en el trabajo 
+                </div>
+            </div>
+            
+            <div class="col-xxl-2 col-lg-2" style="
+            margin-left: 30px;
+            margin-right: 30px;
+        ">
+                <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
+                cursor: pointer;
+                border-radius: 24px;
+                align-items: center;
+                word-wrap: break-word;
+                word-break: break-all;
+                min-height: 50px;
+                min-width: 120px;
+                width: auto;
+                display:flex;
+                justify-content: center;
+                align-items: center;">
+                    Legislación laboral 
+                </div>
+            </div>
+            
+            <div class="col-xxl-2 col-lg-2" style="
+            margin-left: 30px;
+            margin-right: 30px;
+        ">
+                <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
+                cursor: pointer;
+                border-radius: 24px;
+                align-items: center;
+                word-wrap: break-word;
+                word-break: break-all;
+                min-height: 50px;
+                min-width: 120px;
+                width: auto;
+                display:flex;
+                justify-content: center;
+                align-items: center;">
+                    Legislación de energía 
+                </div>
+            </div>
+        </div>
+
     <div class="row">
         <div class="col-lg-12"><!--
             <div class="card">
@@ -987,6 +1232,89 @@
           </div>
           
           <div style="min-height: 600px;">
+            
+    <div class="row text-center text-center align-items-center mb-4 justify-content-center">
+        <div class="col-xxl-2 col-lg-2" style="
+        margin-left: 30px;
+        margin-right: 30px;
+    ">
+            <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
+            cursor: pointer;
+            border-radius: 24px;
+            align-items: center;
+            word-wrap: break-word;
+            word-break: break-all;
+            min-height: 50px;
+            min-width: 120px;
+            width: auto;
+            display:flex;
+            justify-content: center;
+            align-items: center;" class="div-texto-check texto-check">
+                Legislación ambiental
+            </div><!--[ngClass]="{'div-texto-check texto-check': validateCuerpo(c.cuerpoLegal)}" (click)="selectCuerpo(c.cuerpoLegal)"-->
+        </div>
+
+        <div class="col-xxl-2 col-lg-2" style="
+        margin-left: 30px;
+        margin-right: 30px;
+    ">
+            <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
+            cursor: pointer;
+            border-radius: 24px;
+            align-items: center;
+            word-wrap: break-word;
+            word-break: break-all;
+            min-height: 50px;
+            min-width: 120px;
+            width: auto;
+            display:flex;
+            justify-content: center;
+            align-items: center;">
+                Legislación de Seguridad y Salud en el trabajo 
+            </div>
+        </div>
+        
+        <div class="col-xxl-2 col-lg-2" style="
+        margin-left: 30px;
+        margin-right: 30px;
+    ">
+            <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
+            cursor: pointer;
+            border-radius: 24px;
+            align-items: center;
+            word-wrap: break-word;
+            word-break: break-all;
+            min-height: 50px;
+            min-width: 120px;
+            width: auto;
+            display:flex;
+            justify-content: center;
+            align-items: center;">
+                Legislación laboral 
+            </div>
+        </div>
+        
+        <div class="col-xxl-2 col-lg-2" style="
+        margin-left: 30px;
+        margin-right: 30px;
+    ">
+            <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
+            cursor: pointer;
+            border-radius: 24px;
+            align-items: center;
+            word-wrap: break-word;
+            word-break: break-all;
+            min-height: 50px;
+            min-width: 120px;
+            width: auto;
+            display:flex;
+            justify-content: center;
+            align-items: center;">
+                Legislación de energía 
+            </div>
+        </div>
+    </div>
+
           <div class="row">
            
             <app-toastsp aria-live="polite" aria-atomic="true"></app-toastsp>
