--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -28,7 +28,7 @@
                                             <ng-template [ngTemplateOutlet]="TabContent"></ng-template>
                                         </ng-template>
                                     </li>
-                                    <li [ngbNavItem]="2" class="nav-item waves-effect waves-light">
+                                    <li [ngbNavItem]="2" class="nav-item waves-effect waves-light" [disabled]="articles_proyects_group < 1">
                                         <a ngbNavLink (click)="changeTab(2)">
                                             <!--<div class="avatar-sm">
                                                 <span class="avatar-title text-primary rounded-4 fs-6 bg-soft-primary">
@@ -49,7 +49,7 @@
                                             <ng-template [ngTemplateOutlet]="TabContent1"></ng-template>
                                         </ng-template>
                                     </li>
-                                    <li [ngbNavItem]="3" class="nav-item waves-effect waves-light">
+                                    <li [ngbNavItem]="3" class="nav-item waves-effect waves-light" [disabled]="cuerpo_installations < 1">
                                         <a ngbNavLink (click)="changeTab(3)">
                                             <span class="d-sm-block">
                                                 <i class="ri-truck-fill align-middle me-2" style="
@@ -64,7 +64,7 @@
                                             <ng-template [ngTemplateOutlet]="TabContent2"></ng-template>
                                         </ng-template>
                                     </li>
-                                    <li [ngbNavItem]="4" class="nav-item waves-effect waves-light">
+                                    <li [ngbNavItem]="4" class="nav-item waves-effect waves-light" [disabled]="cuerpo_installations.length < 1">
                                         <a ngbNavLink (click)="changeTab(4)">
                                             <span class="d-sm-block">
                                                 <i class="ri-bank-card-line align-middle me-2" style="
@@ -313,7 +313,7 @@
 
 <div class="row">
     <div class="col-12">
-        <button class="btn btn-primary btn-label waves-effect right waves-light" style="float:right;" (click)="saveCuerpos()"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i> Siguiente</button>
+        <button class="btn btn-primary btn-label waves-effect right waves-light" style="float:right;" (click)="saveCuerpos()" [disabled]="articles_proyects.length < 1"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i> Siguiente</button>
     </div>
 </div>
 
@@ -616,7 +616,7 @@
             
             <div class="col-lg-4">-->
             <div style="float:right;"><!--class="row justify-content-end"-->
-                <button type="button" class="btn btn-primary btn-label waves-effect right waves-light" (click)="siguiente()"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i> Siguiente</button>
+                <button type="button" class="btn btn-primary btn-label waves-effect right waves-light" (click)="siguiente()" [disabled]="cuerpo_installations.length < 1"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i> Siguiente</button>
             </div>
             <!--</div>
             </div>-->
@@ -1106,7 +1106,7 @@
     <div class="row">
         <div class="col-lg-12"> 
             <div style="float:right;"><!--class="row justify-content-end"-->
-                <button type="button" class="btn btn-primary btn-label waves-effect right waves-light" (click)="siguiente()"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i> Siguiente</button>
+                <button type="button" class="btn btn-primary btn-label waves-effect right waves-light" (click)="siguiente()" [disabled]="cuerpo_installations.length < 1"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i> Siguiente</button>
             </div>
         </div>
     </div>
